# pyquiz

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml
backend/: .env.example  Procfile  manage.py  nixpacks.toml  pyproject.toml  requirements.txt
backend/config/: settings.py
backend/quiz/: admin.py  ai_service.py  models.py  serializers.py  urls.py  views.py
backend/quiz/management/commands/: seed_questions.py
backend/quiz/migrations/: 0001_initial.py  0002_question_source_quizsession_mode_and_more.py
frontend/: eslint.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/leaderboard/: page.tsx
frontend/src/app/quiz/: page.tsx
frontend/src/app/quiz/result/: page.tsx
frontend/src/lib/: api.ts  store.ts
frontend/src/types/: index.ts
